# Fire-Sequencer

./: .ftpconfig  .gitignore  Fire.code-workspace  FireSequencer.js  PROJECT_OVERVIEW.md  README.md  arial16pt.h  bitmaps.js  config.txt  constants.js  dataObjFile  dataObjFile.json  emitter.js  globalSave  main.js  midi.js  midi0.js  midi1.js  midi2.js  obf.js  package-lock.json  package.json  polyrythm.js  processed1.txt  saveFile  seq_loop.js  test.json  timingLog.json  wifiControl.js  wifiTest.js
assets/fontData24px/: font_info.json
assets/fontData24px/symbols/: font_info.json
assets/fontData32px/: font_info.json
data/: dataObjFile  globalSave  saveFile
docs/: PROJECT_OVERVIEW.md  _Project info.gdoc
fontData16pt/: font_info.json
fontData16pt/symbols/: font_info.json
projects/: 0d15f579-d640-4f12-bca3-4679111154ec  1d1fc495-e297-472a-b26f-7400eedfe207  5c2ef2ce-05f9-4778-a6d8-f609253c2ec5  818d7087-4ba1-43e9-b967-d49e7e93bc8b  d329ad1f-c04a-4588-9de0-08d11460d2ab  ef4ebf18-9bdd-4adc-9204-8abe73f85d06  f9aafc01-4555-4fd3-a1e9-af9c17462284
rust-fire-lib/native/: Cargo.toml  build.rs
rust-fire-lib/native/src/: lib.rs
rust/rust-fire-lib/: README.md  package-lock.json  package.json
rust/rust-fire-lib/native/: Cargo.toml
rust/rust-fire-lib/native/src/: lib.rs
rust_seq/: Cargo.toml
rust_seq/src/: main.rs
src/: FireSequencer.js  emitter.js  main.js  wifiControl.js
