[package]
name = "rust_seq"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unix-ipc = "0.2.0"
libc = "0.2.67"
nix = "0.17.0"
serde = { version = "1.0.104", features = ["derive"] }
bincode = { version = "1.2.1", optional = true }
rand = { version = "0.7.3", optional = true }