[package]
name = "rust-fire-lib"
version = "0.1.0"
authors = ["A.McD."]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_fire_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
num-bigint = "0.2"
num-traits = "0.2"